--- a/package.json
+++ b/package.json
@@ -1,21 +1,38 @@
 {
-  "name": "reactapp",
+  "name": "infomex",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@grapecity/wijmo.all": "^5.20221.842",
+    "@grapecity/wijmo.react.all": "^5.20221.842",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.19.5",
+    "bootstrap": "^5.1.3",
+    "clone-deep": "^4.0.1",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-inject-env": "^2.1.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.15.0",
+    "sass-loader": "^12.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set HTTPS=true&&react-scripts start",
     "build": "react-scripts build",
+    "build-edit-env": "npx react-inject-env set",
+    "build-env": "react-scripts build & npm run build-edit-env",
+    "build-edit-env:q": "set REACT_APP_API_BASE_URL=192.0.0.253:5200& set REACT_APP_INFOMEX_Q=TRUE&set REACT_APP_TITLE=INFOMEX Q&& npx react-inject-env set",
+    "build:q": "env-cmd -f .env.quality react-scripts build & npm run build-edit-env:q",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prestart": "node aspnetcore-https && node aspnetcore-react"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +51,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-config-react-app": "^7.0.1",
+    "jest-editor-support": "^31.0.1"
   }
 }
